--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/URlogo.png" />
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.6.0/css/all.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-regular.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-solid.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Underground Rapper</title>
   </head>
   <body>
-    <div id="root" class="w-full"></div>
+    <div id="root" class="w-full bg-[#131313]"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
