Finished making the website homepage responsive on all devices

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Underground Rapper</title>
   </head>
-  <body>
-    <div id="root" class="w-full bg-[#131313]"></div>
+  <body class="w-screen">
+    <div id="root" class="w-full bg-[#131313] overflow-x-hidden"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
